internal/xds/translator/testdata/out/xds-ir/ratelimit-sourceip-invert.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: except-cidr
      name: first-route
      route:
        cluster: first-route-dest
        rateLimits:
        - actions:
          - genericKey:
              descriptorKey: first-route
              descriptorValue: first-route
          - remoteAddressMatch:
              addressMatcher:
                invertMatch: true
                ranges:
                - addressPrefix: 192.168.0.0
                  prefixLen: 24
              descriptorKey: masked_remote_address
              descriptorValue: invert:192.168.0.0/24
        upgradeConfigs:
        - upgradeType: websocket
